# Astromech-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  astromech-control-engine-plan.md
apps/ace_cli/: main.cpp
bench/: stress_actuators.cpp
config/: actuators.example.json
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: RigView.jsx  TimingGraph.jsx  main.jsx  styles.css  wsClient.js
docs/: ARCHITECTURE.md  DSL_SPEC.md  SERIAL_PROTOCOL.md  TRIGGER_SPEC.md
firmware/arduino_ace_slave/: arduino_ace_slave.ino
include/ace/: actuator.hpp  actuator_bus.hpp  actuator_serial.hpp  actuator_virtual.hpp  event_queue.hpp  json.hpp  scheduler.hpp  sequence.hpp  sync_engine.hpp  telemetry.hpp  trigger.hpp  ws_bridge.hpp
sequences/: dome_spin_beep.seq.json
sequences/examples/: panel_wave.seq.json
src/: actuator_bus.cpp  actuator_serial.cpp  actuator_virtual.cpp  json.cpp  scheduler.cpp  sequence.cpp  sync_engine.cpp  telemetry.cpp  trigger.cpp
tests/: ace_tests.cpp  verify_baud_rate.sh
triggers/: trigger_map.json
